testsuite/poke.pkl/pinned-union-diag-1.pk
/* { dg-do compile } */

type Foo = pinned union /* { dg-error "pinned" } */
  {
    int<16> hi;
    uint<16> lo;
  };
